examples/test/testpolicy485.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy485
  namespace: namespace345
spec:
  podSelector:
    matchLabels:
      key15: value10
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value39
          key26: value35
          key43: value17
      podSelector:
        matchLabels:
          key16: value38
          key25: value40
